--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -37,11 +37,10 @@
         android:layout_width="121dp"
         android:layout_height="76dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="119dp"
-        android:layout_marginStart="26dp"
-        android:text="Submit"
+        android:layout_alignStart="@+id/editText"
+        android:layout_marginBottom="58dp"
         android:background="@drawable/rounded_button"
+        android:text="Submit"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20dp"
         android:textStyle="bold" />
@@ -50,13 +49,25 @@
         android:id="@+id/cancel"
         android:layout_width="121dp"
         android:layout_height="76dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="123dp"
-        android:layout_marginEnd="59dp"
+        android:layout_alignEnd="@+id/textView"
+        android:layout_alignTop="@+id/submit"
         android:background="@drawable/rounded_button"
-        android:textSize="20dp"
-        android:textStyle="bold"
+        android:text="Reset"
         android:textColor="@color/colorPrimary"
-        android:text="Reset" />
+        android:textSize="20dp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/ekey"
+        android:layout_width="298dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="193dp"
+        android:layout_marginStart="45dp"
+        android:ems="10"
+        android:gravity="center"
+        android:inputType="textPersonName"
+        android:hint="Enter the Key" />
+
 </RelativeLayout>
